# scrapy_parser_pep

./: LICENSE  README.md  pyproject.toml  requirements.txt
pep_parse/: constants.py  pipelines.py  settings.py
pep_parse/spiders/: pep.py
results/: pep_2025-09-17T16-20-14.csv  pep_2025-09-17T18-37-08.csv  status_summary_2025-09-17_18-20-38.csv  status_summary_2025-09-17_20-37-23.csv
tests/: test_main.py
